--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-Hello World
-Hello MilkyWay
-Hello Mars
-SPACEX + NASA
+<!DOCTYPE html>
+<html>
+<hhhheaaddd>
+<titttle>Hello</title>
+</head>
+<boddy>
+Hello WOrld
+</body>
+</html>
